fix: variables DOCKER_REGISTRY add

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,4 +23,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ env.DOCKER_REGISTRY }}:latest
+        tags: "${{ vars.DOCKER_REGISTRY }}:latest"
