--- a/argo-test-app.yaml
+++ b/argo-test-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: 'https://github.com/your-org/your-repo.git'
+    repoURL: 'https://github.com/sigigi/k8s-monitoring-test-app.git'
     targetRevision: HEAD
     path: helm/test-app
     helm:
