--- a/argo-test-app.yaml
+++ b/argo-test-app.yaml
@@ -14,7 +14,7 @@ spec:
         - values.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: test-app
+    namespace: project-test-app
   syncPolicy:
     automated:
       prune: true
