--- a/helm/test-app/templates/deployment.yaml
+++ b/helm/test-app/templates/deployment.yaml
@@ -17,5 +17,6 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           ports:
             - containerPort: 3000
+            name: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
