fix: ports.name, containerPort update

--- a/helm/test-app/templates/deployment.yaml
+++ b/helm/test-app/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         - name: test-app
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           ports:
-            - containerPort: 3000
             - name: http
+              containerPort: 3000
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
