--- a/package.json
+++ b/package.json
@@ -6,17 +6,38 @@
         "start": "node app/index.js"
     },
     "dependencies": {
-        "axios": "^1.6.8",
-        "express": "^4.18.2",
-        "prom-client": "^14.1.0",
-        "@opentelemetry/api": "^1.8.0",
-        "@opentelemetry/sdk-trace-node": "^1.8.0",
-        "@opentelemetry/resources": "^1.8.0",
-        "@opentelemetry/semantic-conventions": "^1.8.0",
-        "@opentelemetry/instrumentation": "^0.43.0",
-        "@opentelemetry/instrumentation-http": "^0.43.0",
-        "@opentelemetry/instrumentation-express": "^0.43.0",
-        "@opentelemetry/exporter-trace-otlp-http": "^0.43.0",
-        "@opentelemetry/sdk-trace-base": "^1.8.0"
+        "@opentelemetry/api": "1.9.0",
+        "@opentelemetry/api-logs": "0.202.0",
+        "@opentelemetry/core": "2.0.1",
+        "@opentelemetry/exporter-trace-otlp-http": "0.43.0",
+        "@opentelemetry/instrumentation": "0.202.0",
+        "@opentelemetry/instrumentation-express": "0.51.0",
+        "@opentelemetry/instrumentation-http": "0.202.0",
+        "@opentelemetry/resources": "2.0.1",
+        "@opentelemetry/sdk-trace-base": "1.30.1",
+        "@opentelemetry/sdk-trace-node": "1.30.1",
+        "@opentelemetry/semantic-conventions": "1.34.0",
+        "acorn": "8.15.0",
+        "acorn-import-attributes": "1.9.5",
+        "asynckit": "0.4.0",
+        "axios": "1.10.0",
+        "cjs-module-lexer": "1.4.3",
+        "combined-stream": "1.0.8",
+        "delayed-stream": "1.0.0",
+        "es-set-tostringtag": "2.1.0",
+        "express": "4.21.2",
+        "follow-redirects": "1.15.9",
+        "form-data": "4.0.3",
+        "forwarded-parse": "2.1.2",
+        "has-tostringtag": "1.0.2",
+        "import-in-the-middle": "1.14.2",
+        "is-core-module": "2.16.1",
+        "module-details-from-path": "1.0.4",
+        "path-parse": "1.0.7",
+        "prom-client": "14.2.0",
+        "proxy-from-env": "1.1.0",
+        "require-in-the-middle": "7.5.2",
+        "resolve": "1.22.10",
+        "supports-preserve-symlinks-flag": "1.0.0"
     }
 }
