--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
         "start": "node app/index.js"
     },
     "dependencies": {
-        "@opentelemetry/api": "^1.8.0",
-        "@opentelemetry/exporter-trace-otlp-http": "^0.43.0",
-        "@opentelemetry/sdk-trace-base": "^1.8.0",
-        "@opentelemetry/sdk-trace-node": "^1.8.0",
+        "axios": "^1.6.8",
         "express": "^4.18.2",
-        "prom-client": "^14.1.0"
+        "prom-client": "^14.1.0",
+        "@opentelemetry/api": "^1.8.0",
+        "@opentelemetry/sdk-trace-node": "^1.8.0",
+        "@opentelemetry/resources": "^1.8.0",
+        "@opentelemetry/semantic-conventions": "^1.8.0",
+        "@opentelemetry/instrumentation": "^0.43.0",
+        "@opentelemetry/instrumentation-http": "^0.43.0",
+        "@opentelemetry/instrumentation-express": "^0.43.0",
+        "@opentelemetry/exporter-trace-otlp-http": "^0.43.0",
+        "@opentelemetry/sdk-trace-base": "^1.8.0"
     }
 }
