--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,26 +1,92 @@
-name: Build & Push Docker Image
+name: Build & Push Docker Images
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
-  build:
+  detect-changes:
     runs-on: ubuntu-latest
+    outputs:
+      main_app: ${{ steps.filter.outputs.main_app }}
+      sub1_app: ${{ steps.filter.outputs.sub1_app }}
+      sub2_app: ${{ steps.filter.outputs.sub2_app }}
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
+    - name: Detect changed apps
+      id: filter
+      uses: dorny/paths-filter@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        filters: |
+          main_app:
+            - 'apps/main-app/**'
+          sub1_app:
+            - 'apps/sub1-app/**'
+          sub2_app:
+            - 'apps/sub2-app/**'
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: "${{ vars.DOCKER_REGISTRY }}:latest"
+  build-main-app:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.main_app == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push main-app
+        uses: docker/build-push-action@v4
+        with:
+          context: ./apps/main-app
+          push: true
+          tags: "${{ vars.DOCKER_REGISTRY }}/main-app:main-app-latest"
+
+  build-sub1-app:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.sub1_app == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push sub1-app
+        uses: docker/build-push-action@v4
+        with:
+          context: ./apps/sub1-app
+          push: true
+          tags: "${{ vars.DOCKER_REGISTRY }}/sub1-app:sub1-app-latest"
+
+  build-sub2-app:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.sub2_app == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push sub2-app
+        uses: docker/build-push-action@v4
+        with:
+          context: ./apps/sub2-app
+          push: true
+          tags: "${{ vars.DOCKER_REGISTRY }}/sub2-app:sub2-app-latest"
