--- a/apps/main-app/helm/main-app/Chart.yaml
+++ b/apps/main-app/helm/main-app/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: test-app
+name: main-app
 description: A test application with tracing/metrics/logging
 type: application
 version: 0.1.0
