--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,14 +23,21 @@ jobs:
         filters: |
           main_app:
             - 'apps/main-app/**'
+            - 'argocd/main-app.yaml'
           sub1_app:
             - 'apps/sub1-app/**'
+            - 'argocd/sub1-app.yaml'
           sub2_app:
             - 'apps/sub2-app/**'
+            - 'argocd/sub2-app.yaml'
+          common:
+            - 'Dockerfile'
+            - '.github/**'
+            - 'package.json'
 
   build-main-app:
     needs: detect-changes
-    if: needs.detect-changes.outputs.main_app == 'true'
+    if: needs.detect-changes.outputs.main_app == 'true' || needs.detect-changes.outputs.common == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -52,7 +59,7 @@ jobs:
 
   build-sub1-app:
     needs: detect-changes
-    if: needs.detect-changes.outputs.sub1_app == 'true'
+    if: needs.detect-changes.outputs.sub1_app == 'true' || needs.detect-changes.outputs.common == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -74,7 +81,7 @@ jobs:
 
   build-sub2-app:
     needs: detect-changes
-    if: needs.detect-changes.outputs.sub2_app == 'true'
+    if: needs.detect-changes.outputs.sub2_app == 'true' || needs.detect-changes.outputs.common == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
