--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -37,7 +37,7 @@ jobs:
 
   build-main-app:
     needs: detect-changes
-    if: needs.detect-changes.outputs.main_app == 'true' || needs.detect-changes.outputs.common == 'true'
+    if: ${{ needs.detect-changes.outputs.main_app == 'true' || needs.detect-changes.outputs.common == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -59,7 +59,7 @@ jobs:
 
   build-sub1-app:
     needs: detect-changes
-    if: needs.detect-changes.outputs.sub1_app == 'true' || needs.detect-changes.outputs.common == 'true'
+    if: ${{ needs.detect-changes.outputs.sub1_app == 'true' || needs.detect-changes.outputs.common == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -81,7 +81,7 @@ jobs:
 
   build-sub2-app:
     needs: detect-changes
-    if: needs.detect-changes.outputs.sub2_app == 'true' || needs.detect-changes.outputs.common == 'true'
+    if: ${{ needs.detect-changes.outputs.sub2_app == 'true' || needs.detect-changes.outputs.common == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
