fix: name update, dockerfile: -> file: update

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -53,7 +53,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./apps/main-app
-          dockerfile: ./Dockerfile
+          file: ./Dockerfile
           push: true
           tags: "${{ vars.DOCKER_REGISTRY }}/main-app:main-app-latest"
 
@@ -75,7 +75,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./apps/sub1-app
-          dockerfile: ./Dockerfile
+          file: ./Dockerfile
           push: true
           tags: "${{ vars.DOCKER_REGISTRY }}/sub1-app:sub1-app-latest"
 
@@ -97,6 +97,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./apps/sub2-app
-          dockerfile: ./Dockerfile
+          file: ./Dockerfile
           push: true
           tags: "${{ vars.DOCKER_REGISTRY }}/sub2-app:sub2-app-latest"
