--- a/apps/main-app/helm/main-app/templates/deployment.yaml
+++ b/apps/main-app/helm/main-app/templates/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: test-app
+  name: main-app
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: test-app
+      app: main-app
   template:
     metadata:
       labels:
-        app: test-app
+        app: main-app
     spec:
       containers:
-        - name: test-app
+        - name: main-app
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           ports:
             - name: http
