--- a/apps/main-app/helm/main-app/templates/service.yaml
+++ b/apps/main-app/helm/main-app/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: test-app
+  name: main-app
 spec:
   selector:
-    app: test-app
+    app: main-app
   ports:
     - protocol: TCP
       port: 3000
