--- a/apps/sub1-app/helm/sub1-app/Chart.yaml
+++ b/apps/sub1-app/helm/sub1-app/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: main-app
+name: sub1-app
 description: A test application with tracing/metrics/logging
 type: application
 version: 0.1.0
