--- a/apps/sub1-app/helm/sub1-app/templates/service.yaml
+++ b/apps/sub1-app/helm/sub1-app/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: test-app
+  name: sub1-app
 spec:
   selector:
-    app: test-app
+    app: sub1-app
   ports:
     - protocol: TCP
       port: 3000
