--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -43,6 +43,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Copy shared package.json into app directory
+        run: |
+          cp package*.json apps/main-app/
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -65,6 +69,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Copy shared package.json into app directory
+        run: |
+          cp package*.json apps/sub1-app/
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -86,6 +94,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Copy shared package.json into app directory
+        run: |
+          cp package*.json apps/sub2-app/
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
