fix: npm start script update

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "start": "node app/index.js"
+        "start": "node index.js"
     },
     "dependencies": {
         "@opentelemetry/api": "1.9.0",
